# spy_waw

./: CMakeLists.txt  FindROOT.cmake  MFMlib.in.h  README
include/: MFMlib.in.h
mfm/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.cb1913c.4.9-pre1  CMakeLists.txt.user.dd990d2.22  MFM_Diamant.cbp  MFM_DiamantConfig.cmake  MFMtest  Makefile  README.txt  cmake_install.cmake
mfm/sources/: CMakeLists.txt  DataGenParameters.h  DataParameters.cc  DataParameters.h  DataScalers.cc  MError.cc  MError.h  MFMAllFrames.h  MFMBasicFrame.cc  MFMBasicFrame.h  MFMBoxDiagFrame.cc  MFMBoxDiagFrame.h  MFMChimeraFrame.cc  MFMChimeraFrame.h  MFMCoboFrame.cc  MFMCoboFrame.h  MFMCoboTopoFrame.cc  MFMCoboTopoFrame.h  MFMCommonFrame.cc  MFMCommonFrame.h  MFMDiamantFrame.cc  MFMDiamantFrame.h  MFMEbyedatFrame.cc  MFMEbyedatFrame.h  MFMExogamFrame.cc  MFMExogamFrame.h  MFMFileTest.cc  MFMHelloFrame.cc  MFMHelloFrame.h  MFMMergeFrame.cc  MFMMergeFrame.h  MFMMutantFrame.cc  MFMMutantFrame.h  MFMNedaCompFrame.cc  MFMNedaCompFrame.h  MFMNedaFrame.cc  MFMNedaFrame.h  MFMNedaFrame_old.h  MFMNumExoFrame.cc  MFMNumExoFrame.h  (+36 more)
mfm/tinyxml/: Makefile  xmltest
src/: #TNEDA_crystal.h#  #i2o.h#  DataFrames.cpp  DataFrames.h  MainUserAnalysis.cxx  Makefile  Makefile.am  Makefile.in  Misc.cpp  Misc.h  T32_signal_module.cxx  T32_signal_module.h  TDSSDDetector.h  TDSSD_ring.cpp  TDSSD_ring.h  TDiamant_array.cpp  TDiamant_array.h  TDiamant_crystal.cpp  TDiamant_crystal.h  TEAGLEDetector.h  TEAGLE_array.cxx  TEAGLE_array.h  TEAGLE_crystal.cxx  TEAGLE_crystal.h  TEuclidesDetector.h  TGalileoAnalysis.cxx  TGalileoAnalysis.h  TGalileoCalibrateFactory.h  TGalileoCalibrateProcessor.cxx  TGalileoCalibrateProcessor.h  TGalileoCalibratedEvent.cxx  TGalileoCalibratedEvent.h  TGalileoCalibration.cxx  TGalileoCalibration.h  TGalileoDetector.h  TGalileoEvent.cxx  TGalileoEvent.h  TGalileoEventFactory.cxx  TGalileoEventFactory.h  TGalileoEventProcessor.cxx  (+142 more)
