bin_PROGRAMS = spy_agata 
spy_agata_SOURCES = MainUserAnalysis.cxx T32_signal_module.cxx \
	TRisingAnalysis.cxx TRisingCalibrateFactory.cxx TRisingCalibrateProcessor.cxx \
	TRisingCalibratedEvent.cxx TRisingCalibration.cxx TRisingEvent.cxx TRisingEventFactory.cxx \
	TRisingEventProcessor.cxx TVector3.cxx Tagata.cxx Tagata_elementary_det.cxx Tbonn_magnet.cxx \
	Tcondition_description.cxx Tcracow_exception.cxx Tdante.cxx Tdante_plate.cxx \
	Tdgf_general_detector.cxx Texotic_one_stripe.cxx Texotic_one_stripe.h Texotic_strip_detector.cxx \
	Texotic_strip_detector.h Texotic_vector_strips.cxx Texotic_vector_strips.h Tfile_helper.cxx \
	Tframe_simple.cxx Tfrs.cxx Tfrs_element.cxx Thector.cxx Thector_baf.cxx \
	Thistograms_jurek.cxx Tincrementer_donnor.cxx TjurekMbsEvent.cxx TjurekMbsSubEvent.cpp \
	TjurekPolyCond.cpp Tlookup_table.cxx Tlookup_table_agata.cxx Tlookup_table_doublets.cxx \
	Tlookup_table_triple_universal.cxx Tmultiwire.cxx Tnamed_pointer.cxx Tone_signal_module.cxx \
	Tone_signal_pattern_module.cxx Tpositron_absorber.cxx Tself_gate_abstract_descr.cxx \
	Tself_gate_ger_addback_descr.cxx Tself_gate_ger_descr.cxx \
	Tself_gate_hec_descr.cxx Tsi_detector.cxx Tsilicon_pin_diode.cxx Tsynchro_watchdog_curved.cxx \
	Ttarget_agata.cxx Ttarget_scintillator.cxx Ttime_projection_chamber.cxx \
	Ttof_measurement.cxx Ttracking_ionisation_chamber.cxx Ttwo_signal_module.cxx \
	Tuser_condition.cxx Tuser_gated_spectrum_definition.cxx Tuser_incrementer.cxx \
	Tuser_spectrum.cxx data_psa_65000_1.cpp list_of_files_to_sort.txt psa_hit.cpp spectrum.cxx \
	tbuffer_of_data_block.cpp tdata_ranc0.cpp tdata_ranc1.cxx tdata_ranc1.h tdata_tracked_65_0.cpp \
	tgeneric_data.cpp tjurekabstracteventelement.cxx tjurekabstracteventprocessor.cpp \
	tsocket_fo_data.cxx ttracked_hit.cpp tunpacked_event_data.cpp upack.cpp \
	Tself_gate_agata_psa_descr.cxx  \
	user_spectrum_description.cxx

# set the include path found by configure
INCLUDES = $(all_includes)

# the library search path.
spy_agata_LDFLAGS = $(all_libraries) 
noinst_HEADERS = Go4UserAnalysisLinkDef.h T32_signal_module.h TRisingAnalysis.h \
	TRisingCalibrateFactory.h TRisingCalibrateProcessor.h TRisingCalibratedEvent.h \
	TRisingCalibration.h TRisingEvent.h TRisingEventFactory.h TRisingEventProcessor.h \
	TRisingPar.h TVector3.h Tactive_stopper_combined_xy.h \
	Tactive_stopper_depth_display.h Tactive_stopper_full.h Tactive_stopper_matrix_xy.h \
	Tactive_stopper_munich.h Tactive_stopper_one_stripe.h Tactive_stopper_panorama.h \
	Tactive_stopper_stripe.h Tactive_stopper_vector_strips.h Tagata.h Tagata_elementary_det.h \
	Taoq_calculator.h Tbonn_magnet.h Tcate.h Tcate_telescope.h Tclover.h Tcluster.h \
	Tcluster_xia.h Tcondition_description.h Tcracow_exception.h Tcrystal.h Tcrystal_xia.h \
	Tdante.h Tdante_plate.h Tdegrader.h Tdgf.h Tdgf_general_detector.h \
	Tfile_helper.h Tfinger.h Tfinger_tom.h Tfocal_plane.h Tframe_simple.h Tfrs.h \
	Tfrs_element.h Thector.h Thector_baf.h Thistograms_jurek.h Tincrementer_donnor.h \
	TjurekMbsEvent.h TjurekMbsSubEvent.h TjurekPolyCond.h Tlookup_table.h \
	Tlookup_table_agata.h Tlookup_table_doublets.h Tlookup_table_triple_universal.h \
	Tlookup_table_triplet.h Tmultiwire.h Tmusic.h Tmusic_4anodes.h Tmusic_8anodes.h \
	Tnamed_pointer.h Tone_signal_module.h Tone_signal_pattern_module.h Tpositron_absorber.h \
	Trising.h Tscaler.h Tscaler_dead_time.h Tscintillator.h \
	Tself_gate_abstract_descr.h Tself_gate_agata_psa_descr.h Tself_gate_ger_addback_descr.h \
	Tself_gate_ger_descr.h Tself_gate_hec_descr.h Tsi_detector.h Tsilicon_pin_diode.h \
	Tsynchro_watchdog_curved.h Ttarget.h Ttarget_agata.h Ttarget_scintillator.h \
	Ttime_projection_chamber.h Ttof_measurement.h Ttracking_ionisation_chamber.h Ttwo_signal_module.h \
	Tuser_condition.h Tuser_gated_spectrum_definition.h Tuser_incrementer.h Tuser_spectrum.h \
	Tvector3.h.h Tzet_calculator.h carrier.h data_psa_65000_1.h doppler_enums.h \
	experiment_def.h lockspy_2.h randomizer.h spectrum.h tbuffer_of_data_block.h \
	tdata_ranc0.h tdata_ranc1.h tdata_tracked_65_0.h tgeneric_data.h \
	tjurekabstracteventelement.h tjurekabstracteventprocessor.h tpositon_absorber_interface.h \
	tsocket_fo_data.h ttracked_hit.h tunpacked_event_data.h user_spectrum_description.h
